# talsi

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
python/talsi/: __main__.py  _talsi.pyi
src/: data_codecs.rs  err.rs  lib.rs  py_codecs.rs  snappy_codec.rs  storage.rs  typ.rs  utils.rs  zstd_codec.rs
tests/: conftest.py  test_cli.py  test_crud.py  test_misc.py  test_rename.py  test_stubs.py  test_talsi.py  utils.py
