[package]
name = "talsi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "talsi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module", "eyre", "either"] }
rusqlite = { version = "0.33.0", features = ["bundled", "limits"] }
rayon = "1.10"
snap = "1.1.1"
smallvec = "1.14.0"
either = "1.14.0"
eyre = { version = "0.6.12" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", optional = true, features = ["env-filter"] }
tracing-tree = { version = "0.4.0", optional = true }

[features]
tracing = ["dep:tracing-subscriber", "dep:tracing-tree"]
