[package]
name = "talsi"
version = "0.2.0"
edition = "2024"
license = "MIT"

[lib]
name = "talsi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module", "eyre", "either"] }
rusqlite = { version = "0.37.0", features = ["bundled", "limits"] }
rayon = "1.11"
snap = "1.1.1"
smallvec = "1.15.1"
either = "1.15.0"
eyre = { version = "0.6.12" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", optional = true, features = ["env-filter"] }
tracing-tree = { version = "0.4.1", optional = true }
lazy_static = "1.5.0"

[features]
tracing = ["dep:tracing-subscriber", "dep:tracing-tree"]
