[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "talsi"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
license = "MIT"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "talsi._talsi"

[dependency-groups]
dev = [
    "mypy>=1.19",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "B",
    "COM812",
    "I",
    "PT",
    "RET",
]
